2008-01-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourceprintcompositor.xml:
	add print_compositor_new_from_view function.
	
	* docs/reference/gtksourceview2-gtksourceview.xml: add virtuals.

2008-01-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourceprintcompositor.xml: add.
	
	* docs/reference/gtksourceview2-ref.xml:
	* docs/Makefile.am: add gtksourceprintcompositor docs.
	
	* configure.ac: bump to version 2.1.0 and require gtksourceview 2.1.0.
	
	* gtksourceview2.defs: fix NULL in parameters.

2008-01-16  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs:
	* gtksourceview2.override: add the new GtkSourcePrintCompositor API.

2008-01-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourcestyleschememanager.xml: typo.

2008-01-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs: Fix null-ok in parameters.
	
	* docs/reference/gtksourceview2-gtksourcemarker.xml: remove old docs.
	
	* docs/reference/gtksourceview2-gtksourcemark.xml: add new mark docs.
	
	* docs/Makefile.am:
	* docs/reference/gtksourceview2-gtksourcebuffer.xml:
	* docs/reference/gtksourceview2-gtksourceview.xml:
	* docs/reference/gtksourceview2-ref.xml: New mark API documented.	

2008-01-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs:
	* gtksourceview2.override: add the new GtkSourceMark stuff.

2008-01-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourcestylescheme.xml:
	 add properties section.

2008-01-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/gtksourceview2-ref.xml:
	* docs/reference/gtksourceview2-gtksourcestyleschememanager.xml:
	add new StyleSchemeManager docs.

2008-01-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/gtksourceview2-ref.xml: